<resources>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="field_username">Username</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_repeat_password">Repeat Password</string>
    <string name="sign_up_success">Wow, you have created a new account. Now you can login with it.</string>
    <string name="screen_sign_in">Sign In</string>
    <string name="screen_sign_up">Create Account</string>
    <string name="create_account">Create Account</string>

    <string name="field_is_empty">Field is empty</string>
    <string name="email_invalid">Is not a valid email</string>
    <string name="password_too_short">Password has to be at least 5 symbols</string>
    <string name="password_should_contain_numbers">Password should contain numbers</string>
    <string name="password_should_contain_upper_case">Password should contain upper case letters</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
</resources>